# diplomacy-agents

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
diplomacy_agents/: __init__.py  agent.py  agents.py  cli.py  conductor.py  engine.py  literals.py  models.py  orchestrator.py  prompts.py  test.py  types.py
docs/: conductor_design.md  todo.md
game_saves/: game_state.datc  game_state_42.datc
tests/: conftest.py  test_conductor_smoke.py  test_diplomacy_types.py  test_engine_wrappers.py  test_history_prune.py  test_history_tool_filter.py  test_phase_orders.py  test_placeholder.py  test_prompt_phases.py  test_query_power.py  test_response_instruction.py  test_smoke_game.py  test_smoke_placeholder.py  test_smoke_random_agents.py  test_snapshot_outputs.py
tests/snapshots/builds/: prompt_builds_russia.xml  prompt_press_builds_russia.xml
tests/snapshots/builds/RUSSIA/: game_state.json  orders_schema.json  power_view.json  prompt.txt
tests/snapshots/disbands/: prompt_disbands_germany.txt  prompt_disbands_germany.xml  prompt_press_disbands_germany.xml
tests/snapshots/disbands/GERMANY/: game_state.json  orders_schema.json  power_view.json  prompt.txt
tests/snapshots/moves/: prompt_moves_france.txt  prompt_moves_france.xml  prompt_press_moves_france.xml
tests/snapshots/moves/FRANCE/: game_state.json  orders_schema.json  power_view.json  prompt.txt
tests/snapshots/retreats/: prompt_press_retreats_germany.xml  prompt_retreats_germany.txt  prompt_retreats_germany.xml
tests/snapshots/retreats/GERMANY/: game_state.json  orders_schema.json  power_view.json  prompt.txt
